--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@bytemd/plugin-gfm": "^1.21.0",
     "@bytemd/plugin-highlight": "^1.21.0",
     "@bytemd/vue-next": "^1.21.0",
+    "antd": "^5.18.0",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "moment": "^2.30.1",
